# docs/swagger.json
@@ -4,6 +4,30 @@
         "contact": {}
     },
     "paths": {
+        "/activities": {
+            "get": {
+                "description": "Get all activities",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "activities"
+                ],
+                "summary": "Get all activities",
+                "operationId": "GetAllActivities",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Activity"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/hello": {
             "get": {
                 "description": "Just reply Hello World!",
@@ -79,6 +103,132 @@
                 }
             }
         },
+        "/oauth/clear-session": {
+            "get": {
+                "description": "Clear session data",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "oauth"
+                ],
+                "summary": "Clear session data",
+                "operationId": "ClearSessionData",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/oauth/getuserdata": {
+            "get": {
+                "description": "Get user data",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "oauth"
+                ],
+                "summary": "Get user data",
+                "operationId": "GetUserData",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/oauth/getusersession": {
+            "get": {
+                "description": "Get user session",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "oauth"
+                ],
+                "summary": "Get user session",
+                "operationId": "GetUserSession",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/oauth/logout": {
+            "get": {
+                "description": "Logout",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "oauth"
+                ],
+                "summary": "Logout",
+                "operationId": "LogoutHandler",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/oauth/setusersession": {
+            "get": {
+                "description": "Set user session",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "oauth"
+                ],
+                "summary": "Set user session",
+                "operationId": "SetUserSession",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/oauth/userinfo": {
+            "get": {
+                "description": "Get user info",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "oauth"
+                ],
+                "summary": "Get user info",
+                "operationId": "UserInfoHandler",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/tours": {
             "get": {
                 "description": "Get all tours",
@@ -131,6 +281,51 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/models.Tour"
+                        }
+                    }
+                }
+            }
+        },
+        "/tours/activities/{id}": {
+            "put": {
+                "description": "Update activities by tourId",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "tours"
+                ],
+                "summary": "Update activities by tourId",
+                "operationId": "UpdateActivitiesByTourId",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Tour ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Activities Update",
+                        "name": "activitiesUpdate",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.ActivityResponse"
+                            }
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 }
@@ -283,9 +478,7 @@
                         }
                     }
                 }
-            }
-        },
-        "/tours/{tourId}": {
+            },
             "put": {
                 "description": "Update a tour with the input JSON data",
                 "consumes": [
@@ -512,6 +705,29 @@
         }
     },
     "definitions": {
+        "models.Activity": {
+            "type": "object",
+            "properties": {
+                "activityId": {
+                    "type": "integer"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "endTimestamp": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "startTimestamp": {
+                    "type": "string"
+                },
+                "tourId": {
+                    "type": "integer"
+                }
+            }
+        },
         "models.ActivityRequest": {
             "type": "object",
             "properties": {
@@ -649,6 +865,9 @@
                 "latitude": {
                     "type": "number"
                 },
+                "locationId": {
+                    "type": "integer"
+                },
                 "longitude": {
                     "type": "number"
                 },
@@ -707,7 +926,7 @@
         "models.TourActivityLocation": {
             "type": "object",
             "properties": {
-                "activity": {
+                "activities": {
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/models.ActivityResponse"
